cargo-features = ["edition2024"]

[package]
name = "billionrowchallange"
version = "0.1.0"
edition = "2024"
license = "CC0-1.0"

[dependencies]

# Lints

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
